
add_subdirectory(acledit)
add_subdirectory(aclui)
add_subdirectory(activeds)
add_subdirectory(advapi32)
add_subdirectory(advpack)
add_subdirectory(authz)
add_subdirectory(avicap32)
add_subdirectory(batt)
add_subdirectory(beepmidi)
add_subdirectory(cabinet)
add_subdirectory(cards)
add_subdirectory(cfgmgr32)
add_subdirectory(clusapi)
add_subdirectory(compstui)
add_subdirectory(credui)
add_subdirectory(crtdll)
add_subdirectory(crypt32)
add_subdirectory(cryptdll)
add_subdirectory(dbghelp)
add_subdirectory(dciman32)
add_subdirectory(dhcpcsvc)
add_subdirectory(dnsapi)
add_subdirectory(dwmapi)
add_subdirectory(faultrep)
add_subdirectory(fmifs)
add_subdirectory(fusion)
add_subdirectory(gdi32)
add_subdirectory(getuname)
add_subdirectory(hid)
add_subdirectory(httpapi)
add_subdirectory(iccvid)
add_subdirectory(icmp)
add_subdirectory(imaadp32.acm)
add_subdirectory(imagehlp)
add_subdirectory(imm32)
add_subdirectory(initpki)
add_subdirectory(iphlpapi)
add_subdirectory(itircl)
add_subdirectory(kernel32)
add_subdirectory(loadperf)
add_subdirectory(lpk)
add_subdirectory(lz32)
add_subdirectory(mapi32)
add_subdirectory(mciavi32)
add_subdirectory(mcicda)
add_subdirectory(mciqtz32)
add_subdirectory(mciseq)
add_subdirectory(mciwave)
add_subdirectory(mmdrv)
add_subdirectory(modemui)
add_subdirectory(mpr)
add_subdirectory(mprapi)
add_subdirectory(msadp32.acm)
add_subdirectory(msafd)
add_subdirectory(mscms)
add_subdirectory(mscoree)
add_subdirectory(msg711.acm)
add_subdirectory(msgina)
add_subdirectory(msgsm32.acm)
add_subdirectory(msimg32)
add_subdirectory(msnet32)
add_subdirectory(mssign32)
add_subdirectory(mssip32)
add_subdirectory(msvcrt)
add_subdirectory(msvcrt20)
add_subdirectory(msvcrt40)
add_subdirectory(msvfw32)
add_subdirectory(msvidc32)
add_subdirectory(mswsock)
add_subdirectory(nddeapi)
add_subdirectory(netapi32)
add_subdirectory(newdev)
add_subdirectory(ntdsapi)
add_subdirectory(ntlanman)
add_subdirectory(ntprint)
add_subdirectory(olecli32)
add_subdirectory(oledlg)
add_subdirectory(olesvr32)
add_subdirectory(olethk32)
add_subdirectory(pidgen)
add_subdirectory(powrprof)
add_subdirectory(printui)
add_subdirectory(query)
add_subdirectory(rasapi32)
add_subdirectory(rasdlg)
add_subdirectory(rasman)
add_subdirectory(resutils)
add_subdirectory(samlib)
add_subdirectory(samsrv)
add_subdirectory(sccbase)
add_subdirectory(schannel)
add_subdirectory(sensapi)
add_subdirectory(serialui)
add_subdirectory(shdoclc)
add_subdirectory(shfolder)
add_subdirectory(shlwapi)
add_subdirectory(slbcsp)
add_subdirectory(smdll)
add_subdirectory(sndblst)
add_subdirectory(snmpapi)
add_subdirectory(spoolss)
add_subdirectory(srclient)
add_subdirectory(sxs)
add_subdirectory(t2embed)
add_subdirectory(tapi32)
add_subdirectory(tapiui)
add_subdirectory(traffic)
add_subdirectory(updspapi)
add_subdirectory(url)
add_subdirectory(user32)
add_subdirectory(usp10)
add_subdirectory(uxtheme)